# agent-architecture

./: .env.example  README.md  main.py  pyproject.toml
agent_architecture/: __init__.py  agent.py  config.py  eval.py  orchestrator.py  prompts.py  router.py  runner.py
agent_architecture/examples/: __init__.py  ollama_chat_demo.py  short_term_memory.py
agent_architecture/llm/: __init__.py  client.py  factory.py  ollama.py  response.py
agent_architecture/memory/: __init__.py  items.py  semantic_store.py  session_store.py  short_term.py  working_memory.py
agent_architecture/observability/: __init__.py  events.py  log.py  tokens.py
agent_architecture/tools/: __init__.py  memory_lookup.py  registry.py  tool.py
memory/: short-term-memory.py
tests/: test_eval.py  test_memory.py  test_trajectory.py
