[project]
name = "agent-architecture"
version = "0.1.0"
description = "Study notes and code sketches for agent architecture patterns."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "structlog>=25.5.0",
]

[project.scripts]
ollama-chat-demo = "agent_architecture.examples.ollama_chat_demo:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_architecture"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
